# AIETChatBot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
chatbot/: load_data.py  main.py
