[project]
name = "pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-mistralai>=1.1.2",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "unstructured>=0.21.5",
]
